--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "hyperf/logger": "~2.0.0",
         "hyperf/memory": "~2.0.0",
         "hyperf/process": "~2.0.0",
-        "hyperf/redis": "~2.0.0"
+        "hyperf/redis": "~2.0.0",
+        "phper666/hyperf-server-command": "~1.0.0"
     },
     "require-dev": {
         "swoole/ide-helper": "^4.5",
@@ -33,7 +34,8 @@
         "doctrine/common": "^2.9",
         "phpstan/phpstan": "^0.12",
         "hyperf/devtool": "~2.0.0",
-        "hyperf/testing": "~2.0.0"
+        "hyperf/testing": "~2.0.0",
+        "hyperf/watcher": "^2.0"
     },
     "suggest": {
         "ext-openssl": "Required to use HTTPS.",
