--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "hyperf/memory": "~2.0.0",
         "hyperf/process": "~2.0.0",
         "hyperf/redis": "~2.0.0",
-        "phper666/hyperf-server-command": "~1.0.0"
+        "phper666/hyperf-server-command": "~1.0.0",
+        "hyperf/websocket-server": "^2.0"
     },
     "require-dev": {
         "swoole/ide-helper": "^4.5",
