--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "hyperf/process": "~2.0.0",
         "hyperf/redis": "~2.0.0",
         "phper666/hyperf-server-command": "~1.0.0",
-        "hyperf/websocket-server": "^2.0"
+        "hyperf/websocket-server": "^2.0",
+        "hyperf/websocket-client": "^2.0"
     },
     "require-dev": {
         "swoole/ide-helper": "^4.5",
